--- a/pix.html
+++ b/pix.html
@@ -2,94 +2,124 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pagamento via PIX | Mercado Livre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pagamento via Pix | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    .pix-container {
-      text-align: center;
+    .pagamento-container {
+      max-width: 500px;
+      margin: 0 auto;
       padding: 20px;
+      text-align: center;
     }
-    .timer {
-      font-size: 16px;
-      color: #ff0000;
-      margin-bottom: 10px;
+
+    .cronometro {
+      font-size: 18px;
+      color: red;
+      margin-top: 5px;
+      font-weight: bold;
     }
-    .pix-container img {
-      width: 220px;
-      margin-bottom: 20px;
+
+    .qr-code {
+      width: 240px;
+      height: 240px;
+      margin: 20px auto;
+      background: #eee;
     }
-    .pix-code {
-      word-break: break-word;
+
+    .pix-codigo {
       background: #f5f5f5;
       padding: 10px;
-      border-radius: 5px;
-      margin: 10px auto;
-      max-width: 90%;
+      border-radius: 8px;
+      word-break: break-all;
+      margin: 10px 0;
     }
-    .copy-btn {
-      margin-top: 10px;
-      padding: 10px 20px;
+
+    .btn-copiar {
       background-color: #3483fa;
-      color: #fff;
+      color: white;
+      padding: 10px 16px;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
+      font-weight: bold;
       cursor: pointer;
+      transition: background-color 0.3s;
     }
-    .copy-btn:hover {
-      background-color: #2968c8;
+
+    .btn-copiar.copiado {
+      background-color: #28a745;
+    }
+
+    .instrucoes {
+      text-align: left;
+      margin-top: 30px;
+      font-size: 14px;
+      line-height: 1.6;
+    }
+
+    .instrucoes li {
+      margin-bottom: 8px;
     }
   </style>
 </head>
 <body class="pix-page">
+
   <header>
-    <div class="header-content">
-      <a href="index.html">
-        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
-      </a>
-    </div>
+    <a href="index.html"><img src="assets/logo-1.png" alt="Logo" class="logo" /></a>
   </header>
 
-  <main class="container">
-    <div class="pix-container">
-      <p class="timer" id="timer">Tempo restante: 15:00</p>
-      <h2>Escaneie o QR Code abaixo para pagar</h2>
-      <img src="assets/qrcode-pix.png" alt="QR Code PIX" />
-      <p class="pix-code" id="pixCode">
-        00020101021126580014BR.GOV.BCB.PIX0136506341452345698415204000053039865802BR5925LOJA LIBREMERC LTDA6009SAO PAULO62240520LIBREMERC-PIX-20236270404A8B
-      </p>
-      <button class="copy-btn" onclick="copyPix()">Copiar código PIX</button>
+  <main class="pagamento-container">
+    <h2>Pagamento via Pix</h2>
+    <p><strong>Oferta válida por 5 minutos. Pague antes que acabe!</strong></p>
+    <div class="cronometro" id="cronometro">05:00</div>
+
+    <div class="qr-code">
+      <img src="assets/qrcode.png" alt="QR Code Pix" style="width: 100%; height: 100%;">
     </div>
+
+    <p>Ou copie o código abaixo para colar no app do seu banco:</p>
+    <div class="pix-codigo" id="codigoPix">
+      00020126480014br.gov.bcb.pix0114+5588999999995204000053039865405100.005802BR5925LibreMerc Pagamentos6010Sao Paulo62070503***6304A1B2
+    </div>
+
+    <button class="btn-copiar" id="copiarBtn" onclick="copiarCodigoPix()">Copiar código Pix</button>
+
+    <ul class="instrucoes">
+      <li>🏦 Abra o app do seu banco ou carteira digital</li>
+      <li>📋 Escolha a opção "Pix Copia e Cola"</li>
+      <li>🔗 Cole o código que você copiou acima</li>
+      <li>✅ Confirme o pagamento</li>
+    </ul>
   </main>
 
   <script>
-    // Cronômetro regressivo
-    let timeLeft = 15 * 60;
-    const timerEl = document.getElementById("timer");
+    // Cronômetro 5 minutos
+    let tempo = 5 * 60; // 5 minutos
+    const display = document.getElementById("cronometro");
 
-    function updateTimer() {
-      const minutes = Math.floor(timeLeft / 60);
-      const seconds = timeLeft % 60;
-      timerEl.textContent = `Tempo restante: ${minutes}:${seconds.toString().padStart(2, "0")}`;
-      if (timeLeft > 0) {
-        timeLeft--;
-        setTimeout(updateTimer, 1000);
-      } else {
-        timerEl.textContent = "Tempo expirado. Por favor, gere um novo código.";
-      }
+    function atualizarCronometro() {
+      const minutos = Math.floor(tempo / 60).toString().padStart(2, "0");
+      const segundos = (tempo % 60).toString().padStart(2, "0");
+      display.textContent = `${minutos}:${segundos}`;
+      if (tempo > 0) tempo--;
     }
 
-    updateTimer();
+    setInterval(atualizarCronometro, 1000);
 
-    // Função para copiar o código PIX
-    function copyPix() {
-      const pixCode = document.getElementById("pixCode").textContent;
-      navigator.clipboard.writeText(pixCode).then(() => {
-        alert("Código PIX copiado!");
-      }).catch(err => {
-        alert("Erro ao copiar o código.");
+    // Botão copiar Pix
+    function copiarCodigoPix() {
+      const codigo = document.getElementById("codigoPix").textContent;
+      navigator.clipboard.writeText(codigo).then(() => {
+        const botao = document.getElementById("copiarBtn");
+        botao.textContent = "✅ Código copiado com sucesso!";
+        botao.classList.add("copiado");
+        setTimeout(() => {
+          botao.textContent = "Copiar código Pix";
+          botao.classList.remove("copiado");
+        }, 4000);
       });
     }
   </script>
+
 </body>
 </html>
