--- a/checkout.html
+++ b/checkout.html
@@ -2,175 +2,122 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finalizar Compra | Mercado Livre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Checkout | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    .popup-confirmacao {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(0,0,0,0.6);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
-
-    .popup-box {
-      background: white;
-      border-radius: 12px;
-      padding: 30px;
-      max-width: 420px;
-      width: 90%;
-      text-align: center;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-    }
-
-    .popup-box h2 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    .popup-dados {
-      text-align: left;
-      font-size: 14px;
-      color: #444;
-      margin-bottom: 20px;
-      line-height: 1.6;
-    }
-
-    .popup-botoes button {
-      padding: 12px 20px;
-      margin: 5px;
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .btn-cancelar {
-      background: #ccc;
-    }
-
-    .btn-confirmar {
-      background: #3483fa;
-      color: #fff;
-    }
-
-    .erro {
-      color: red;
-      font-size: 12px;
-      margin-top: 5px;
-    }
-  </style>
 </head>
 <body class="checkout-page">
 
   <header>
-    <a href="index.html"><img src="assets/logo-1.png" alt="Logo" class="logo" /></a>
+    <a href="index.html">
+      <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
+    </a>
   </header>
 
   <main class="container">
-    <h2>Finalize sua compra</h2>
+    <h2>Finalizar Compra</h2>
     <form id="checkoutForm">
       <label for="nome">Nome completo:</label>
       <input type="text" id="nome" required />
 
       <label for="cpf">CPF:</label>
-      <input type="text" id="cpf" required placeholder="000.000.000-00" />
-      <div id="erro-cpf" class="erro"></div>
+      <input type="text" id="cpf" required />
 
       <label for="telefone">Telefone:</label>
-      <input type="tel" id="telefone" required placeholder="(99) 99999-9999" />
+      <input type="text" id="telefone" required />
 
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" required />
-
-      <button type="submit">Finalizar compra</button>
+      <button type="submit">Confirmar dados</button>
     </form>
   </main>
 
-  <!-- POPUP -->
-  <div class="popup-confirmacao" id="popup">
-    <div class="popup-box">
-      <h2>Confirme seus dados</h2>
-      <div class="popup-dados" id="dadosResumo"></div>
-      <div class="popup-botoes">
-        <button class="btn-cancelar" onclick="fecharPopup()">Cancelar</button>
-        <button class="btn-confirmar" onclick="confirmarCompra()">Confirmar</button>
-      </div>
+  <!-- Pop-up -->
+  <div id="popup" class="popup hidden">
+    <div class="popup-content">
+      <h3>Confira seus dados</h3>
+      <div id="dados-confirmacao"></div>
+      <button id="fecharPopup">Corrigir</button>
+      <a href="pix.html" class="btn-comprar">Ir para pagamento</a>
     </div>
   </div>
 
   <script>
-    function validarCPF(cpf) {
-      cpf = cpf.replace(/[^\d]+/g, '');
-      if (cpf.length !== 11 || /^(\d)\1+$/.test(cpf)) return false;
-
-      let soma = 0;
-      for (let i = 0; i < 9; i++) soma += parseInt(cpf.charAt(i)) * (10 - i);
-      let resto = 11 - (soma % 11);
-      if (resto === 10 || resto === 11) resto = 0;
-      if (resto !== parseInt(cpf.charAt(9))) return false;
-
-      soma = 0;
-      for (let i = 0; i < 10; i++) soma += parseInt(cpf.charAt(i)) * (11 - i);
-      resto = 11 - (soma % 11);
-      if (resto === 10 || resto === 11) resto = 0;
-      if (resto !== parseInt(cpf.charAt(10))) return false;
-
-      return true;
+    function getEnderecoLocalStorage() {
+      return {
+        cep: localStorage.getItem("cep") || "",
+        cidade: localStorage.getItem("cidade") || "",
+        estado: localStorage.getItem("estado") || "",
+        rua: localStorage.getItem("rua") || "",
+        numero: localStorage.getItem("numero") || "",
+        bairro: localStorage.getItem("bairro") || "",
+        complemento: localStorage.getItem("complemento") || ""
+      };
     }
 
-    document.getElementById("checkoutForm").addEventListener("submit", function(e) {
+    function preencherPopup(dados) {
+      const popup = document.getElementById("popup");
+      const confirmacao = document.getElementById("dados-confirmacao");
+
+      confirmacao.innerHTML = `
+        <p><strong>Nome:</strong> ${dados.nome}</p>
+        <p><strong>CPF:</strong> ${dados.cpf}</p>
+        <p><strong>Telefone:</strong> ${dados.telefone}</p>
+        <hr>
+        <p><strong>Endereço:</strong></p>
+        <p>${dados.rua}, ${dados.numero}</p>
+        <p>${dados.bairro} - ${dados.cidade}/${dados.estado}</p>
+        <p>CEP: ${dados.cep}</p>
+        <p>${dados.complemento}</p>
+      `;
+
+      popup.classList.remove("hidden");
+    }
+
+    document.getElementById("checkoutForm").addEventListener("submit", function (e) {
       e.preventDefault();
 
       const nome = document.getElementById("nome").value;
       const cpf = document.getElementById("cpf").value;
       const telefone = document.getElementById("telefone").value;
-      const email = document.getElementById("email").value;
+      const endereco = getEnderecoLocalStorage();
 
-      if (!validarCPF(cpf)) {
-        document.getElementById("erro-cpf").textContent = "CPF inválido. Verifique e tente novamente.";
+      // Verifica se o endereço está completo
+      if (!endereco.cep || !endereco.rua || !endereco.numero || !endereco.bairro || !endereco.cidade || !endereco.estado) {
+        // Redireciona para o CEP e marca que veio do checkout
+        window.location.href = "cep.html?from=checkout";
         return;
-      } else {
-        document.getElementById("erro-cpf").textContent = "";
       }
 
-      // Recuperar endereço do localStorage
-      const endereco = {
-        cep: localStorage.getItem("cep") || "-",
-        rua: localStorage.getItem("rua") || "-",
-        numero: localStorage.getItem("numero") || "-",
-        bairro: localStorage.getItem("bairro") || "-",
-        cidade: localStorage.getItem("cidade") || "-",
-        estado: localStorage.getItem("estado") || "-",
-        complemento: localStorage.getItem("complemento") || ""
-      };
+      // Salva dados do usuário
+      localStorage.setItem("nome", nome);
+      localStorage.setItem("cpf", cpf);
+      localStorage.setItem("telefone", telefone);
 
-      const resumo = `
-        <strong>Nome:</strong> ${nome}<br>
-        <strong>CPF:</strong> ${cpf}<br>
-        <strong>Telefone:</strong> ${telefone}<br>
-        <strong>Email:</strong> ${email}<br><br>
-        <strong>Endereço:</strong><br>
-        ${endereco.rua}, ${endereco.numero} ${endereco.complemento ? '- ' + endereco.complemento : ''}<br>
-        ${endereco.bairro} - ${endereco.cidade}/${endereco.estado}<br>
-        CEP: ${endereco.cep}
-      `;
-
-      document.getElementById("dadosResumo").innerHTML = resumo;
-      document.getElementById("popup").style.display = "flex";
+      preencherPopup({
+        nome,
+        cpf,
+        telefone,
+        ...endereco
+      });
     });
 
-    function fecharPopup() {
-      document.getElementById("popup").style.display = "none";
-    }
+    document.getElementById("fecharPopup").addEventListener("click", () => {
+      document.getElementById("popup").classList.add("hidden");
+    });
 
-    function confirmarCompra() {
-      window.location.href = "pix.html";
-    }
+    // Verifica se voltou da página de CEP e já mostra o pop-up
+    window.addEventListener("load", () => {
+      const params = new URLSearchParams(window.location.search);
+      if (params.get("pop") === "true") {
+        const nome = localStorage.getItem("nome") || "";
+        const cpf = localStorage.getItem("cpf") || "";
+        const telefone = localStorage.getItem("telefone") || "";
+        const endereco = getEnderecoLocalStorage();
+
+        if (nome && cpf && telefone) {
+          preencherPopup({ nome, cpf, telefone, ...endereco });
+        }
+      }
+    });
   </script>
 
 </body>
