--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Checkout | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Estilo simples para o pop-up */
+    .popup {
+      position: fixed;
+      top: 0; left: 0; right:0; bottom: 0;
+      background: rgba(0,0,0,0.5);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .popup.hidden {
+      display: none;
+    }
+    .popup-content {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 400px;
+      width: 90%;
+      box-shadow: 0 0 10px rgba(0,0,0,0.25);
+      text-align: left;
+    }
+    .popup-content hr {
+      margin: 15px 0;
+    }
+    .popup-content p {
+      margin: 6px 0;
+    }
+    .btn-comprar {
+      display: inline-block;
+      background: #ffe600;
+      color: #333;
+      padding: 10px 16px;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 15px;
+      cursor: pointer;
+    }
+    #fecharPopup {
+      background: #ccc;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+  </style>
 </head>
 <body class="checkout-page">
 
@@ -20,27 +69,54 @@
       <label for="nome">Nome completo:</label>
       <input type="text" id="nome" required />
 
-      <label for="cpf">CPF:</label>
-      <input type="text" id="cpf" required />
+       <label for="cpf">CPF:</label>
+      <input type="text" id="cpf" required maxlength="14" placeholder="000.000.000-00" />
+
+      <label for="email">E-mail:</label>
+      <input type="email" id="email" required />
 
       <label for="telefone">Telefone:</label>
-      <input type="text" id="telefone" required />
+      <input type="tel" id="telefone" required placeholder="(00) 00000-0000" />
 
       <button type="submit">Confirmar dados</button>
     </form>
   </main>
 
   <!-- Pop-up -->
-  <div id="popup" class="popup hidden">
+  <div id="popup" class="popup hidden" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
     <div class="popup-content">
-      <h3>Confira seus dados</h3>
+      <h3 id="popupTitle">Confira seus dados</h3>
       <div id="dados-confirmacao"></div>
-      <button id="fecharPopup">Corrigir</button>
+      <button id="fecharPopup" type="button">Corrigir</button>
       <a href="pix.html" class="btn-comprar">Ir para pagamento</a>
     </div>
   </div>
 
   <script>
+    // Validação básica CPF (com formatação)
+    function validarCPF(cpf) {
+      cpf = cpf.replace(/[^\d]+/g,'');
+      if(cpf.length !== 11 ||
+         /^(\d)\1{10}$/.test(cpf))
+        return false;
+
+      let soma = 0;
+      for(let i=0; i<9; i++)
+        soma += parseInt(cpf.charAt(i)) * (10 - i);
+      let resto = (soma * 10) % 11;
+      if(resto === 10 || resto === 11) resto = 0;
+      if(resto !== parseInt(cpf.charAt(9))) return false;
+
+      soma = 0;
+      for(let i=0; i<10; i++)
+        soma += parseInt(cpf.charAt(i)) * (11 - i);
+      resto = (soma * 10) % 11;
+      if(resto === 10 || resto === 11) resto = 0;
+      if(resto !== parseInt(cpf.charAt(10))) return false;
+
+      return true;
+    }
+
     function getEnderecoLocalStorage() {
       return {
         cep: localStorage.getItem("cep") || "",
@@ -59,6 +135,7 @@
 
       confirmacao.innerHTML = `
         <p><strong>Nome:</strong> ${dados.nome}</p>
+        <p><strong>E-mail:</strong> ${dados.email}</p>
         <p><strong>CPF:</strong> ${dados.cpf}</p>
         <p><strong>Telefone:</strong> ${dados.telefone}</p>
         <hr>
@@ -66,34 +143,76 @@
         <p>${dados.rua}, ${dados.numero}</p>
         <p>${dados.bairro} - ${dados.cidade}/${dados.estado}</p>
         <p>CEP: ${dados.cep}</p>
-        <p>${dados.complemento}</p>
+        <p>${dados.complemento || ""}</p>
       `;
 
       popup.classList.remove("hidden");
     }
 
+    // Formata CPF enquanto o usuário digita
+    function formatarCPF(value) {
+      return value
+        .replace(/\D/g, '')
+        .replace(/(\d{3})(\d)/, '$1.$2')
+        .replace(/(\d{3})(\d)/, '$1.$2')
+        .replace(/(\d{3})(\d{1,2})$/, '$1-$2');
+    }
+
+    // Formata telefone enquanto o usuário digita
+    function formatarTelefone(value) {
+      value = value.replace(/\D/g, '');
+      if (value.length > 11) value = value.slice(0,11);
+      if (value.length > 10) {
+        return value.replace(/^(\d{2})(\d{5})(\d{4}).*/, '($1) $2-$3');
+      } else if (value.length > 5) {
+        return value.replace(/^(\d{2})(\d{4})(\d{0,4}).*/, '($1) $2-$3');
+      } else if (value.length > 2) {
+        return value.replace(/^(\d{2})(\d{0,5})/, '($1) $2');
+      } else if (value.length > 0) {
+        return value.replace(/^(\d*)/, '($1');
+      }
+      return value;
+    }
+
+    // Aplica máscaras
+    document.getElementById("cpf").addEventListener("input", e => {
+      e.target.value = formatarCPF(e.target.value);
+    });
+
+    document.getElementById("telefone").addEventListener("input", e => {
+      e.target.value = formatarTelefone(e.target.value);
+    });
+
     document.getElementById("checkoutForm").addEventListener("submit", function (e) {
       e.preventDefault();
 
-      const nome = document.getElementById("nome").value;
-      const cpf = document.getElementById("cpf").value;
-      const telefone = document.getElementById("telefone").value;
+      const nome = document.getElementById("nome").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const cpf = document.getElementById("cpf").value.trim();
+      const telefone = document.getElementById("telefone").value.trim();
       const endereco = getEnderecoLocalStorage();
+
+      // Valida CPF
+      if (!validarCPF(cpf)) {
+        alert("CPF inválido. Por favor, verifique e tente novamente.");
+        return;
+      }
 
       // Verifica se o endereço está completo
       if (!endereco.cep || !endereco.rua || !endereco.numero || !endereco.bairro || !endereco.cidade || !endereco.estado) {
-        // Redireciona para o CEP e marca que veio do checkout
         window.location.href = "cep.html?from=checkout";
         return;
       }
 
-      // Salva dados do usuário
+      // Salva dados no localStorage
       localStorage.setItem("nome", nome);
+      localStorage.setItem("email", email);
       localStorage.setItem("cpf", cpf);
       localStorage.setItem("telefone", telefone);
 
       preencherPopup({
         nome,
+        email,
         cpf,
         telefone,
         ...endereco
@@ -104,17 +223,18 @@
       document.getElementById("popup").classList.add("hidden");
     });
 
-    // Verifica se voltou da página de CEP e já mostra o pop-up
+    // Se voltou da página de CEP já mostra pop-up com dados salvos
     window.addEventListener("load", () => {
       const params = new URLSearchParams(window.location.search);
       if (params.get("pop") === "true") {
         const nome = localStorage.getItem("nome") || "";
+        const email = localStorage.getItem("email") || "";
         const cpf = localStorage.getItem("cpf") || "";
         const telefone = localStorage.getItem("telefone") || "";
         const endereco = getEnderecoLocalStorage();
 
-        if (nome && cpf && telefone) {
-          preencherPopup({ nome, cpf, telefone, ...endereco });
+        if (nome && email && cpf && telefone) {
+          preencherPopup({ nome, email, cpf, telefone, ...endereco });
         }
       }
     });
