--- a/checkout.html
+++ b/checkout.html
@@ -6,7 +6,6 @@
   <title>Checkout | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Estilo simples para o pop-up */
     .popup {
       position: fixed;
       top: 0; left: 0; right:0; bottom: 0;
@@ -69,7 +68,7 @@
       <label for="nome">Nome completo:</label>
       <input type="text" id="nome" required />
 
-       <label for="cpf">CPF:</label>
+      <label for="cpf">CPF:</label>
       <input type="text" id="cpf" required maxlength="14" placeholder="000.000.000-00" />
 
       <label for="email">E-mail:</label>
@@ -82,7 +81,6 @@
     </form>
   </main>
 
-  <!-- Pop-up -->
   <div id="popup" class="popup hidden" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
     <div class="popup-content">
       <h3 id="popupTitle">Confira seus dados</h3>
@@ -93,28 +91,23 @@
   </div>
 
   <script>
-    // Validação básica CPF (com formatação)
     function validarCPF(cpf) {
-      cpf = cpf.replace(/[^\d]+/g,'');
-      if(cpf.length !== 11 ||
-         /^(\d)\1{10}$/.test(cpf))
-        return false;
+      cpf = cpf.replace(/[^\d]+/g, '');
+      if (cpf.length !== 11 || /^(\d)\1{10}$/.test(cpf)) return false;
 
       let soma = 0;
-      for(let i=0; i<9; i++)
+      for (let i = 0; i < 9; i++)
         soma += parseInt(cpf.charAt(i)) * (10 - i);
       let resto = (soma * 10) % 11;
-      if(resto === 10 || resto === 11) resto = 0;
-      if(resto !== parseInt(cpf.charAt(9))) return false;
+      if (resto === 10 || resto === 11) resto = 0;
+      if (resto !== parseInt(cpf.charAt(9))) return false;
 
       soma = 0;
-      for(let i=0; i<10; i++)
+      for (let i = 0; i < 10; i++)
         soma += parseInt(cpf.charAt(i)) * (11 - i);
       resto = (soma * 10) % 11;
-      if(resto === 10 || resto === 11) resto = 0;
-      if(resto !== parseInt(cpf.charAt(10))) return false;
-
-      return true;
+      if (resto === 10 || resto === 11) resto = 0;
+      return resto === parseInt(cpf.charAt(10));
     }
 
     function getEnderecoLocalStorage() {
@@ -149,7 +142,6 @@
       popup.classList.remove("hidden");
     }
 
-    // Formata CPF enquanto o usuário digita
     function formatarCPF(value) {
       return value
         .replace(/\D/g, '')
@@ -158,7 +150,6 @@
         .replace(/(\d{3})(\d{1,2})$/, '$1-$2');
     }
 
-    // Formata telefone enquanto o usuário digita
     function formatarTelefone(value) {
       value = value.replace(/\D/g, '');
       if (value.length > 11) value = value.slice(0,11);
@@ -174,7 +165,6 @@
       return value;
     }
 
-    // Aplica máscaras
     document.getElementById("cpf").addEventListener("input", e => {
       e.target.value = formatarCPF(e.target.value);
     });
@@ -192,19 +182,16 @@
       const telefone = document.getElementById("telefone").value.trim();
       const endereco = getEnderecoLocalStorage();
 
-      // Valida CPF
       if (!validarCPF(cpf)) {
         alert("CPF inválido. Por favor, verifique e tente novamente.");
         return;
       }
 
-      // Verifica se o endereço está completo
       if (!endereco.cep || !endereco.rua || !endereco.numero || !endereco.bairro || !endereco.cidade || !endereco.estado) {
         window.location.href = "cep.html?from=checkout";
         return;
       }
 
-      // Salva dados no localStorage
       localStorage.setItem("nome", nome);
       localStorage.setItem("email", email);
       localStorage.setItem("cpf", cpf);
@@ -223,8 +210,13 @@
       document.getElementById("popup").classList.add("hidden");
     });
 
-    // Se voltou da página de CEP já mostra pop-up com dados salvos
     window.addEventListener("load", () => {
+      // Preenche os campos
+      document.getElementById("nome").value = localStorage.getItem("nome") || "";
+      document.getElementById("email").value = localStorage.getItem("email") || "";
+      document.getElementById("cpf").value = localStorage.getItem("cpf") || "";
+      document.getElementById("telefone").value = localStorage.getItem("telefone") || "";
+
       const params = new URLSearchParams(window.location.search);
       if (params.get("pop") === "true") {
         const nome = localStorage.getItem("nome") || "";
@@ -239,26 +231,5 @@
       }
     });
   </script>
-  <script>// Preenche os campos automaticamente se já houver dados salvos
-window.addEventListener("load", () => {
-  document.getElementById("nome").value = localStorage.getItem("nome") || "";
-  document.getElementById("email").value = localStorage.getItem("email") || "";
-  document.getElementById("cpf").value = localStorage.getItem("cpf") || "";
-  document.getElementById("telefone").value = localStorage.getItem("telefone") || "";
-
-  // Se voltou do cep.html, abre o popup
-  const params = new URLSearchParams(window.location.search);
-  if (params.get("pop") === "true") {
-    const endereco = getEnderecoLocalStorage();
-    const nome = localStorage.getItem("nome") || "";
-    const email = localStorage.getItem("email") || "";
-    const cpf = localStorage.getItem("cpf") || "";
-    const telefone = localStorage.getItem("telefone") || "";
-
-    preencherPopup({ nome, email, cpf, telefone, ...endereco });
-  }
-});
-  </script>
-
 </body>
 </html>
